--- a/whatsapp/package.json
+++ b/whatsapp/package.json
@@ -15,8 +15,10 @@
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
-    "socket.io-client": "^4.2.0",
     "react-scroll-to-bottom": "^4.1.2",
+    "redux": "^4.1.1",
+    "redux-thunk": "^2.3.0",
+    "socket.io-client": "^4.2.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
